--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "boilerplate-react-app",
+  "name": "scrabble-cheat-react",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
