--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "4.15.4",
     "extract-text-webpack-plugin": "3.0.0",
     "firebase": "4.2.0",
+    "fs": "0.0.1-security",
     "history": "4.7.2",
     "moment": "2.18.1",
     "node-sass": "4.5.3",
