--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-dates": "12.7.0",
     "react-dom": "16.0.0",
     "react-modal": "2.2.2",
+    "react-native-filesystem": "0.1.0",
     "react-redux": "5.0.5",
     "react-router-dom": "4.2.2",
     "redux": "3.7.2",
