--- a/package.json
+++ b/package.json
@@ -31,10 +31,12 @@
     "normalize.css": "7.0.0",
     "numeral": "2.0.6",
     "raf": "3.3.2",
+    "raw-loader": "^3.1.0",
     "react": "16.0.0",
     "react-addons-shallow-compare": "15.6.0",
     "react-dates": "12.7.0",
     "react-dom": "16.0.0",
+    "react-file-reader": "^1.1.4",
     "react-modal": "2.2.2",
     "react-native-filesystem": "0.1.0",
     "react-redux": "5.0.5",
